# learning_ros2

./: .gitignore
aux_utils/: CMakeLists.txt  package.xml
aux_utils/src/: twist_stamped_publisher.cpp
bumperbot_arduino/: CMakeLists.txt  package.xml
bumperbot_arduino/arduino/Serial_blink/: Serial_blink.ino
bumperbot_arduino/arduino/Serial_transmitter/: Serial_transmitter.ino
bumperbot_arduino/include/bumperbot_arduino/: bumperbot_interface.hpp
bumperbot_arduino/src/: bumperbot_initerface.cpp  serial_blinker.cpp  simple_serial_receiver.cpp  simple_serial_transmitter.cpp
bumperbot_bringup/launch/: simulated_robot.launch.py
bumperbot_controller/: CMakeLists.txt  package.xml
bumperbot_controller/bumperbot_controller/: simple_controller.py
bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_topics.yaml
bumperbot_controller/include/bumperbot_controller/: noisy_controller.hpp  simple_controller.hpp
bumperbot_controller/launch/: controller.launch.py  controller_2.launch.py  joystick_teleop.launch.py
bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
bumperbot_cpp/: CMakeLists.txt  package.xml
bumperbot_cpp/include/bumperbot_cpp/: simple_tf_kinematics.hpp  simple_turtlesim_kinematics.hpp
bumperbot_cpp/src/: simple_lifecycle_node.cpp  simple_parameter.cpp  simple_publisher_cpp.cpp  simple_subscriber_cpp.cpp  simple_tf_kinematics.cpp  simple_turtlesim_kinematics.cpp
bumperbot_cpp_examples/: CMakeLists.txt
bumperbot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node_2.cpp  simple_qos_publisher.cpp  simple_qos_subscriber.cpp
bumperbot_description/: package.xml
bumperbot_description/launch/: display.launch.py  gazebo.launch.py
bumperbot_description/rviz/: display.rviz
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_complete.urdf  bumperbot_gazebo.xacro
bumperbot_description/worlds/: small_warehouse.world
bumperbot_interfaces/: CMakeLists.txt  package.xml
bumperbot_interfaces/srv/: GetTransform.srv  RestartPath.srv  RestartTransform.srv
bumperbot_localization/: CMakeLists.txt  package.xml
bumperbot_localization/config/: amcl.yaml  amcl_viz.rviz  ekf.yaml
bumperbot_localization/include/bumperbot_localization/: kalman_filter.hpp  odometry_motion_model.hpp
bumperbot_localization/launch/: global_localization.launch.py  localization.launch.py
bumperbot_localization/src/: imu_republisher.cpp  kalman_filter.cpp  odometry_motion_model.cpp
bumperbot_mapping/: CMakeLists.txt  package.xml
bumperbot_mapping/config/: slam_toolbox.yaml
bumperbot_mapping/include/bumperbot_mapping/: mapping_with_known_poses.hpp
bumperbot_mapping/launch/: slam.launch.py
bumperbot_mapping/src/: mapping_with_known_poses.cpp
bumperbot_motion/: CMakeLists.txt  package.xml
bumperbot_motion/include/bumperbot_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
bumperbot_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
bumperbot_msgs/: package.xml
bumperbot_planning/: CMakeLists.txt  package.xml
bumperbot_planning/include/bumperbot_planning/: a_star_planner.hpp  dijkstra_planner.hpp
bumperbot_planning/rviz/: planning_viz.rviz
bumperbot_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
bumperbot_py/: package.xml  setup.cfg  setup.py
bumperbot_py/bumperbot_py/: simple_publisher.py  simple_subscriber.py
bumperbot_utils/: CMakeLists.txt  package.xml
bumperbot_utils/include/bumperbot_utils/: path_publisher.hpp
bumperbot_utils/src/: path_publisher.cpp  safety_stop.cpp
final_project/: CMakeLists.txt  package.xml
final_project/src/: turtleController.cpp  turtleController_LLM.cpp  turtleSpawner.cpp
jackal_playground/: CMakeLists.txt  package.xml
jackal_playground/config/: jackal_controllers.yaml  joy_teleop.yaml
jackal_playground/launch/: gazebo.launch.py  jackal.launch.py  jackal_controller.launch.py  joystick_teleop.launch.py
jackal_playground/urdf/: jackal.urdf.xacro  jackal_gazebo.xacro  jackal_ros2_control.xacro  jackal_simple.urdf.xacro
learn_cpp_ros/: CMakeLists.txt  package.xml
learn_cpp_ros/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server_node.cpp  compute_area_server_node.cpp  counter_reset_client.cpp  hw_status_publisher.cpp  number_counter.cpp  number_publisher.cpp
learn_cpp_ros/src/battery_led_exercise/: battery_node.cpp  led_node.cpp
learn_cpp_ros/src/robot_news_station/: robot_news_publisher.cpp  smartphone.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: robot_news_station.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: LedStates.msg
my_robot_interfaces/srv/: SetLed.srv
