<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_playground</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="manuel.alejandro.diaz.zapata@gmail.com">manuel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>aux_utils</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  

  <exec_depend>cpr_onav_description</exec_depend>
  <exec_depend>flir_camera_description</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>pointgrey_camera_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
